# claude-island-linux

./: .gitignore  ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  README.md  SUMMARY.md
backend/: README.md  TESTING.md  pyproject.toml
backend/claude_island_service/: __main__.py  file_monitor.py  hook_installer.py
backend/src/claude_island_applet/: __init__.py
backend/src/claude_island_service/: __init__.py  conversation_parser.py  socket_server.py
backend/tests/: __init__.py
docs/: GNOME_EXTENSION_APPROACH.md  README.md  TESTING.md
src/claude_island_applet/: __main__.py  dbus_client.py  indicator.py
src/claude_island_service/: dbus_service.py  state_manager.py
src/claude_island_service/resources/: claude-island-state.py
tests/: test_state_manager.py
