[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-island-service"
version = "0.1.0"
description = "Backend service for Claude Island Linux"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "TBD"}
authors = [
    {name = "Lucas Roesler", email = "lucas@roesler.dev"}
]
keywords = ["claude", "claude-code", "notification", "monitor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Desktop Environment",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "PyGObject>=3.42",
    "watchdog>=3.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
claude-island-service = "claude_island_service.__main__:main"

[project.urls]
Homepage = "https://github.com/LucasRoesler/claude-island-linux"
Repository = "https://github.com/LucasRoesler/claude-island-linux"
Issues = "https://github.com/LucasRoesler/claude-island-linux/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_island_service*"]

[tool.setuptools.package-data]
claude_island_service = ["resources/*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
