[project]
name = "claude-island"
version = "0.1.0"
description = "Claude Island for Linux - Backend service and applet"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "TBD"}
authors = [
    {name = "Lucas Roesler", email = "lucas@roesler.dev"}
]
keywords = ["claude", "claude-code", "notification", "monitor", "appindicator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: Desktop Environment",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "PyGObject>=3.42",
    "watchdog>=3.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
claude-island-service = "claude_island_service.__main__:main"
claude-island-applet = "claude_island_applet.__main__:main"

[project.urls]
Homepage = "https://github.com/LucasRoesler/claude-island-linux"
Repository = "https://github.com/LucasRoesler/claude-island-linux"
Issues = "https://github.com/LucasRoesler/claude-island-linux/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_island_service", "src/claude_island_applet"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
